# Izumi

./: .gitignore  CLAUDE.md  README.md  izumi.spec  main.py  pyproject.toml
.github/workflows/: build.yml  sbom-validate.yml  security.yml
analyzer/: __init__.py  classifier.py  copyright.py  grouper.py  models.py  scanner.py
analyzer/parser/: __init__.py  clang_parser.py  regex_parser.py
docs/: architecture.md  spec.md
gui/: __init__.py  main_window.py  review_view.py  sbom_view.py  scan_view.py  settings_view.py
i18n/: __init__.py  en.json  en.py  ja.json  ja.py
llm/: __init__.py  external_llm.py  license_analyzer.py  local_llm.py  prompts.py  results.py
sbom/: __init__.py  cyclonedx_writer.py  spdx_writer.py
tests/test_analyzer/: test_classifier.py  test_copyright.py  test_grouper.py  test_scanner.py
tests/test_gui/: conftest.py  test_main_window.py  test_sbom_view.py  test_scan_view.py  test_settings_view.py
tests/test_llm/: __init__.py  test_external_llm.py  test_local_llm.py  test_prompts.py  test_results.py
tests/test_sbom/: test_cyclonedx_writer.py  test_spdx_writer.py
