[project]
name = "izumi"
version = "0.1.0"
description = "C/C++ embedded source tree OSS detection and SBOM assistance tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cyclonedx-bom>=7.3.0",
    "libclang>=18.1.1",
    "litellm>=1.83.11,<1.83.12",
    "pyside6>=6.11.0",
    "spdx-tools>=0.8.5",
]

[project.scripts]
izumi = "main:main"

[dependency-groups]
dev = [
    "ntia-conformance-checker>=5.0.1",
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
gui = [
    "pytest-qt>=4.5.0",
]

[tool.uv]
constraint-dependencies = [
    "lxml>=6.1.0",
    "pygments>=2.20.0",
    "requests>=2.33.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
